--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                     <div class="card-content">
                         <h3>Authorization</h3>
                         <p>Authorize the bot to access your Discord account for enhanced functionality.</p>
-                        <a href="https://katabum.com/authorize" class="card-btn">Authorize</a>
+                        <a href="https://discord.com/oauth2/authorize?client_id=1127907091324080218&response_type=code&redirect_uri=https%3A%2F%2Fdashboard.katabump.com%2Fauth%2Fdiscord&scope=email+identify+guilds.join" class="card-btn">Authorize</a>
                     </div>
                 </div>
                 
