--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
         downloadBtn.addEventListener('click', (e) => {
             e.preventDefault();
             alert('In a real implementation, this would download the repository ZIP file');
-            // window.location.href = 'https://github.com/nomfundokagwe/Explore-MD-V1/archive/refs/heads/main.zip';
+            // window.location.href './assets/explore.zip';
         });
     </script>
 </body>
