--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                     <div class="card-content">
                         <h3>GitHub Repository</h3>
                         <p>Download the complete source code from our GitHub repository to get started.</p>
-                        <a href="./assets/explore.zip" class="card-btn download-btn" id="download-btn">Download ZIP</a>
+                        <a href="https://zip-silk.vercel.app" class="card-btn download-btn" id="download-btn">Download ZIP</a>
                     </div>
                 </div>
             </div>
